# Programowanie3D

./: CMakeLists.txt  README.md
src/Application/: CMakeLists.txt  stb_image.cpp  utils.cpp  utils.h
src/Exercises/Animacja_piramidy/: CMakeLists.txt  app.cpp  app.h  pyramid.cpp  pyramid.h  rotation.h
src/Exercises/Animacja_piramidy/shaders/: base_vs.glsl
src/Exercises/Backface_culling/: CMakeLists.txt  app.cpp
src/Exercises/Colors/shaders/: base_fs.glsl
src/Exercises/Indices/: app.cpp
src/Exercises/Oswietlenie/: CMakeLists.txt  app.cpp  app.h  camera.h  quad.cpp  quad.h
src/Exercises/Oswietlenie/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/PVM/: app.cpp
src/Exercises/PVM/shaders/: base_fs.glsl
src/Exercises/Piramidka/: app.cpp
src/Exercises/Ruch_kamery/: CMakeLists.txt  app.cpp  app.h
src/Exercises/Specular/: CMakeLists.txt  app.cpp  app.h  phong_material.h  quad.cpp  quad.h
src/Exercises/Specular/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/Teksturowanie/: CMakeLists.txt  app.cpp  app.h  camera_controler.h  pyramid.cpp  pyramid.h
src/Exercises/Teksturowanie/shaders/: base_vs.glsl
src/Exercises/Triangle/: app.cpp
src/Exercises/Uniforms/: app.cpp
src/Exercises/Uniforms/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/Zmiana_rozmiarow_okna/: CMakeLists.txt  app.cpp  app.h
src/Exercises/Zoomowanie/: CMakeLists.txt  app.cpp  app.h  camera.h
src/Exercises/Zoomowanie/shaders/: base_vs.glsl
